--- a/.swiftpm/xcode/xcshareddata/xcschemes/AlphaVantageStockAPI-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/AlphaVantageStockAPI-Package.xcscheme
@@ -88,6 +88,13 @@
             ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "API_KEY"
+            value = "WCJNKXRI1AMHDBB0"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
